--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ h1 {
 label {
     font-size: 1rem;
     margin-top: 1rem;
+    color: #767575e9;
 }
 
 textarea {
@@ -33,12 +34,12 @@ textarea {
     font-size: 1rem;
     padding: 0.5rem;
     border-radius: 5px;
-    border: 1px solid #949494;
+    border: 1px solid #767575e9;
 }
 
 .counter {
     font-size: 1rem;
-    color: #555;
+    color: black;
 }
 
 #toggle {
@@ -58,5 +59,5 @@ textarea {
 
 p {
     font-size: 0.7rem;
-    color: rgb(158, 158, 158);
+    color: rgb(117, 117, 117);
 }
